# prodcons

./: .gitignore  CMakeLists.txt  cmdoptions.cpp  cmdoptions.hpp  concurrency.cpp  concurrency.hpp  main.cpp  mytype.hpp  readfile.cpp  readfile.hpp  readme.txt  smalltools.cpp  smalltools.hpp  transformline.cpp  transformline.hpp
rndtxt/: CMakeLists.txt  cmdoptions.cpp  cmdoptions.hpp  main.cpp  testascii.cpp  testascii.hpp
tests/: CMakeLists.txt  myunittests.cpp
